# personal_cpa_back

./: .coveragerc  .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  .ruff.toml  README.md  Taskfile.yaml  Taskfile.yml  config.yml  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: feature.md
database/: Taskfile.yml  atlas.hcl  database.hcl  gen-diff.sh
database/migrations/: 20250429075126_create-table.sql  20250706111556_create-coa-table.sql  20250706113152_create-coa-table.sql  atlas.sum
docker-compose/: Taskfile.yml  compose.yml  wait-db-ready.sh
docker-compose/personal_cpa-initdb/: 1-ddl.sql
docs/project_proposal/: chart_of_accounts.md
personal_cpa/: __init__.py  main.py  settings.yaml
personal_cpa/adapter/inbound/api/routes/: __init__.py  health.py
personal_cpa/health/: __init__.py
personal_cpa/health/adapter/: __init__.py
personal_cpa/health/adapter/inbound/: __init__.py
personal_cpa/health/adapter/inbound/api/: __init__.py
src/: Taskfile.yml
src/core/: __init__.py
src/personal_cpa/: auto_named_enum.py  config.py  container.py  database.py  exceptions.py  logger.py  main.py
src/personal_cpa/adapter/inbound/api/: error_handler.py
src/personal_cpa/adapter/inbound/api/model/: chart_of_account.py
src/personal_cpa/adapter/inbound/api/routes/: chart_of_account.py
src/personal_cpa/adapter/outbound/database/mapper/: chart_of_account.py
src/personal_cpa/adapter/outbound/database/model/: base.py  chart_of_account.py
src/personal_cpa/adapter/outbound/database/repository/: chart_of_account.py
src/personal_cpa/application/port/input/command/: chart_of_account.py
src/personal_cpa/application/port/input/use_case/: chart_of_account.py
src/personal_cpa/application/port/output/: chart_of_account.py
src/personal_cpa/application/service/: chart_of_account.py
src/personal_cpa/core/: config.py  logger.py
src/personal_cpa/domain/: chart_of_account.py
src/personal_cpa/domain/enum/: chart_of_account.py
src/personal_cpa/infrastructure/: container.py  database.py
tests/unit/core/: test_database.py
tests/unit/domain/: test_chart_of_account.py
