[tool.poetry]
name = "personal-cpa"
version = "25.3.1"
description = ""
authors = ["mildsalmon <mildsalmon@gmail.com>"]
readme = "README.md"
packages = [
    {include = "personal_cpa"}
]

[tool.poetry.dependencies]
python = "3.13.1"
fastapi = "^0.115.11"
dynaconf = "^3.2.10"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pre-commit = "^4.1.0"
pyright = "^1.1.396"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
